swagger fixed